logic fixes, pto dto updated